Landing website pretty much complete, need to fix spacing/resizing issues as well as button validation when colors are/aren't selected and sending actual requests to backend

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,14 @@
     color: #F5F2F2;
 }
 
+.colorBox {
+    background-color: white;
+    width: 35px;
+    height: 35px;
+    border: 4px solid #362A4D;
+    border-radius: 20%;
+}
+
 .p1 {
     color: #F5F2F2;
     font-size: 20px;
@@ -12,6 +20,7 @@
 .title1 {
     color: #F5F2F2;
     font-size: 120px;
+    margin-top: 80px;
     font-family: Roboto Slab, Serif;
 }
 
@@ -19,6 +28,12 @@
     color: #362A4D;
     font-size: 50px;
     font-family: Roboto, Serif;
+}
+
+#nav_fixed {
+    position:fixed;
+    width:100%;
+
 }
 
 .subtitle1 {
@@ -33,6 +48,14 @@
     font-family: Roboto, Serif;
     color: #362A4D;
     padding-top: 15px;
+}
+
+#color_txt {
+    font-size: 25px;
+    font-family: Roboto, Serif;
+    color: #362A4D;
+    padding-left: 90px;
+    padding-top: 5px;
 }
 
 .paragraph1 {
